增加地块地图

--- a/ruoyi-ui-vue3/index.html
+++ b/ruoyi-ui-vue3/index.html
@@ -12,9 +12,9 @@
   <script src="system.js"></script> 
   <script src="jspdf.umd.min.js"></script> <!-- 引入 jsPDF 库 -->
   <script src="turf.min.js"></script>
-  <script src="quickearth/geotiff.js"></script>
+  <!-- <script src="quickearth/geotiff.js"></script>
   <script src="quickearth/quickearth.core.js"></script>
-  <script src="quickearth/quickearth.cesium.js"></script>
+  <script src="quickearth/quickearth.cesium.js"></script> -->
   <!--[if lt IE 11]><script>window.location.href='/html/ie.html';</script><![endif]-->
   <style>
     html,
