--- a/ruoyi-ui-vue3/index.html
+++ b/ruoyi-ui-vue3/index.html
@@ -12,6 +12,7 @@
   <script src="system.js"></script> 
   <script src="jspdf.umd.min.js"></script> <!-- 引入 jsPDF 库 -->
   <script src="turf.min.js"></script>
+  <script src="crypto-js.min.js"></script>
   <!-- <script src="quickearth/geotiff.js"></script>
   <script src="quickearth/quickearth.core.js"></script>
   <script src="quickearth/quickearth.cesium.js"></script> -->
